# statistik-2-team-3

./: .gitignore  README.md  pyproject.toml  requirements.txt
images/: avg_lyric.html  eng_lyrics.html  german_lyrics_statistics.html  grammar_per_genre.html  language_per_genre.html  location_map.html  non_german_lyrics.html  positive_bubble_chart.html  song_variety_fig.html  top_ten_languages_pie.html  tr_lyrics.html  unique_word_count_fig.html
notebooks/: collaborations.ipynb  german_lyrics.ipynb  german_lyrics_statistics.ipynb  huggingface_tutorial.ipynb  linguisic.ipynb  location.ipynb  pandas_tutorial.ipynb  spacy-tutorial.ipynb  spacy_visualisation.ipynb  spracherkennung.ipynb  statistics copy.ipynb  statistics.ipynb  visualisations.ipynb
